fix-successful-z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1711,7 +1711,7 @@ input[type=radio]:checked::before {
   height: 100%;
   width: 100%;
   background-color: rgba(12, 117, 254, 0.3);
-  z-index: 25;
+  z-index: 50;
   display: none;
 }
 .successful__wrapper {
