--- a/sass/components/_successful.scss
+++ b/sass/components/_successful.scss
@@ -4,7 +4,7 @@
     height: 100%;
     width: 100%;
     background-color: rgba(12, 117, 254, 0.3);
-    z-index: 25;
+    z-index: 50;
     display: none;
   }
 
